# ptero-cli

./: .tarpaulin.toml  Cargo.toml  LICENSE  README.md  tarpaulin-report.json
.github/workflows/: rust.yml
config/: grcov.yml
ptero_common/: Cargo.toml
ptero_common/src/: config.rs  lib.rs  method.rs  observer.rs
ptero_common/tests/: observer_test.rs  tests.rs
ptero_derive/: Cargo.toml
ptero_text/: Cargo.toml
ptero_text/resources/cover_texts/: html_text.html  long_text  short_text  single_char_long_text  single_char_short_text  unicode_text
ptero_text/resources/stego_texts/extended_line/one_bit/: html_text_variant_1.html  html_text_variant_2.html  html_text_variant_3.html  long_text_variant_1  long_text_variant_2  long_text_variant_3  short_text_variant_2  short_text_variant_3  single_char_long_text_variant_1  single_char_long_text_variant_2  single_char_long_text_variant_3  single_char_short_text_variant_1  single_char_short_text_variant_2  single_char_short_text_variant_3  unicode_text_variant_1  unicode_text_variant_2  unicode_text_variant_3
ptero_text/resources/stego_texts/extended_line/two_bit/: html_text_variant_1.html  html_text_variant_2.html  html_text_variant_3.html  long_text_variant_1  long_text_variant_2  long_text_variant_3  short_text_variant_2  single_char_long_text_variant_1  single_char_long_text_variant_2  single_char_long_text_variant_3  single_char_short_text_variant_1  single_char_short_text_variant_2  single_char_short_text_variant_3  unicode_text_variant_1  unicode_text_variant_2  unicode_text_variant_3
ptero_text/src/: extended_line_method.rs  lib.rs  line_separator.rs
ptero_text/src/extended_line_method/: character_sets.rs  line_extend_method.rs  random_whitespace_method.rs  trailing_whitespace_method.rs
ptero_text/tests/: extended_line_method.rs  extended_line_method_test.rs  lib.rs  test_resource.rs  tests.rs
ptero_text/tests/extended_line_method/: builder_test.rs  mod.rs  one_bit_test.rs  two_bit_test.rs
ptero_text/tests/extended_line_method_test/: one_bit_test.rs  two_bit_test.rs
resources/: data.txt
resources/cover/: cover_ascii.txt  cover_utf8.txt
resources/stego/: stego_ascii.txt  stego_utf8_eline.txt  stego_utf8_eluv.txt
scripts/: bitrate_for_pivot.sh  measure_bitrate.sh
src/: binary.rs  context.rs  decoder.rs  encodable.rs  encoder.rs  lib.rs  log.rs  main.rs  method.rs  text.rs  verify.rs
src/cli/: capacity.rs  commands.rs  decoder.rs  encoder.rs  print.rs  progress.rs  writer.rs
src/cli/commands/: extended_line.rs
src/decoder/: line_extend_decoder.rs  random_whitespace_decoder.rs  trailing_whitespace_decoder.rs
src/decoder/complex/: extended_line_decoder.rs
src/encoder/: complex_encoder.rs  extended_line_encoder.rs  line_extend_encoder.rs  random_whitespace_encoder.rs  trailing_unicode_encoder.rs  trailing_whitespace_encoder.rs
src/encoder/complex/: extended_line_encoder.rs
src/encoder/complex_encoder/: eluv_encoder.rs  extended_line_encoder.rs
src/lib/: binary.rs  text.rs
src/method/: complex.rs  config.rs  extended_line_method.rs  line_extend.rs  random_whitespace.rs  random_whitespace_method.rs  trailing_unicode.rs  trailing_whitespace.rs  trailing_whitespace_method.rs  variant.rs
src/method/complex/: eluv.rs  extended_line.rs
src/method/extended_line_method/: random_whitespace_method.rs  trailing_whitespace_method.rs
src/method/trailing_unicode/: character_sets.rs
tests/: cli_test.rs  decode_test.rs  encode_test.rs  method.rs  utils.rs
tests/method/: extended_line_method_test.rs
