[package]
authors = ["Paweł Górski <dev.baymax42@gmail.com>"]
edition = "2018"
name = "ptero-cli"
version = "0.3.1"
license-file = "LICENSE"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doc = true
name = "ptero"
path = "src/lib.rs"

[[bin]]
doc = false
name = "ptero_cli"
path = "src/bin/main.rs"

[dependencies]
atty = "0.2.0"
indicatif = "0.15.0"
rand = "0.7.3"
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
chrono = "0.4"
clap = "3.0.0-beta.2"
regex = "1.4.2"
colored = "2"
serde_json = "1.0"
assert_cmd = "1.0.2"

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.5"
