[package]
authors = ["Paweł Górski <dev.baymax42@gmail.com>"]
edition = "2018"
name = "ptero-cli"
description = "A text steganography CLI tool for Social Media"
keywords = ["steganography", "encoding", "decoding", "text", "cli"]
version = "0.4.2"
license-file = "LICENSE"
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doc = true
name = "ptero"
path = "src/lib.rs"

[[bin]]
doc = false
name = "ptero_cli"
path = "src/bin/main.rs"

[dependencies]
atty = "0.2.0"
indicatif = "0.15.0"
rand = "0.7.3"
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
chrono = "0.4"
clap = "3.0.0-beta.2"
regex = "1.4.2"
colored = "2"
serde_json = "1.0"
derive_builder = "0.10.2"
unicode-segmentation = "1.8.0"
snafu = "0.6.10"
bitvec = "0.22.3"

[dev-dependencies]
assert_cmd = "1.0.2"
predicates = "1.0.6"
