[package]
authors = ["Paweł Górski <dev.baymax42@gmail.com>"]
description = "A text steganography CLI tool for Social Media"
edition = "2018"
include = [
  "**/*.rs",
  "Cargo.toml",
]
keywords = ["steganography", "encoding", "decoding", "text", "cli"]
license-file = "LICENSE"
name = "ptero-cli"
readme = "README.md"
version = "0.4.2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doc = true
name = "ptero"
path = "src/lib.rs"

[[bin]]
doc = false
name = "ptero_cli"
path = "src/bin/main.rs"

[workspace]
members = [
  "ptero_common",
  "ptero_text",
]

[dependencies]
atty = "0.2.0"
bitvec = "0.22.3"
chrono = "0.4"
clap = {version = "4.1.1", features = ["derive", "cargo"]}
colored = "2"
derive_builder = "0.12.0"
fern = {version = "0.6", features = ["colored"]}
indicatif = "0.15.0"
log = "0.4"
ptero_common = {version = "0.1", path = "ptero_common/"}
ptero_text = {version = "0.1", path = "ptero_text/"}
rand = "0.8.5"
regex = "1.5.5"
serde_json = "1.0"
snafu = "0.6.10"
unicode-segmentation = "1.8.0"

[dev-dependencies]
assert_cmd = "1.0.2"
predicates = "1.0.6"
